--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
