--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=9211
 DATABASE_URL="postgres://avnadmin:AVNS_kqm0qUYDJEfRx22JlTk@pg-28ea5e11artical-itsyash9211-bde1.l.aivencloud.com:17594/defaultdb?sslmode=require"
