--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=9211
+GITHUB_ID=Ov23liNfUxCMIVvUxORe
+GITHUB_SECRET=0fd0c76e446705588692c90546ae119e0cfefa0c
 DATABASE_URL="postgres://avnadmin:AVNS_kqm0qUYDJEfRx22JlTk@pg-28ea5e11artical-itsyash9211-bde1.l.aivencloud.com:17594/defaultdb?sslmode=require"
